style: Fix CSS formatting and enhance list spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -598,8 +598,10 @@ button,input,select,textarea {
 }
 
 .post-content li {
-    position: relative
+    position: relative;
+    margin-bottom: 0.2em;
 }
+
 
 .post-content ol>li:before,.post-content ul>li:before {
     position: absolute;
